계산기+자잘한 수정

--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ input:focus{
     position: relative;
     left: 0.1em;
 }
-.dicy {
+.rollbox {
     margin: 0;
     cursor: pointer;
     width : 15rem;
